// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppThemeProvider colorSchemeがdarkの場合にdark用のAppThemeが取得できること 1`] = `
<Text
  testID="test"
>
  darkTheme
</Text>
`;

exports[`AppThemeProvider colorSchemeがlightの場合にlight用のAppThemeが取得できること 1`] = `
<Text
  testID="test"
>
  lightTheme
</Text>
`;
